fix import + alignment

--- a/src/app/projects/list/list.component.scss
+++ b/src/app/projects/list/list.component.scss
@@ -16,6 +16,6 @@
 .grid-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: start;
     align-items: stretch;
 }
